configureFromArgs modified for OCRProcess